--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/resize.js"></script>
+  <script src="js/effects.js"></script>
+  <script src="js/hashtags.js"></script>
 
 </body>
 </html>
