--- a/index.html
+++ b/index.html
@@ -207,13 +207,12 @@
   </template>
 
   <script src="js/common.js"></script>
-  <script src="js/data.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
   <script src="js/resize.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/hashtags.js"></script>
-
 </body>
 </html>
